[tool.poetry]
name = "vvplotter"
version = "0.1.0"
description = ""
authors = ["Dylan Teague <dteague@cern.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.2"
prettytable = "^0.7.2"
mplhep = "^0.1.36"
awkward1 = "^0.2.37"
pyarrow = "^1.0.1"
boost-histogram = "^0.10.2"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
